# fixedrec

./: MANIFEST.in  Readme.md  entry.py  pyproject.toml
examples/: layout.struct
src/fixedrec/: __init__.py  __main__.py  cli.py  parser.py
tests/: test_cli_basic.py
tests/data/: sample.struct
